--- a/static/css/index.css
+++ b/static/css/index.css
@@ -45,7 +45,7 @@ nav ul{
     float:left;
     width:70%;
     border-right:solid;
-    background-color:white;
+    background-color:gray;
 }
 
 #rightS{
@@ -116,6 +116,8 @@ nav ul{
 #titleLeft{
     text-align:center;
     border-bottom:solid 1px;
+    background-color:#8B0000;
+    color:white;
 }
 
 #trash{
@@ -150,4 +152,22 @@ nav ul{
     margin:0 auto;
     position:relative:
     top:10px;
+}
+
+.dot{
+    font-size:410%;
+    position:relative;
+    top:-29px;
+    color:red;
+}
+
+#bottonS{
+    background-color: #e8e8e8;
+    border-top: solid;
+}
+
+#bottonSection{
+    min-height:200px;
+
+
 }
