--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css\index.css' %}"  />
+    <link rel="stylesheet" href="{% static 'css\cart.css' %}"  />
+    <link rel="stylesheet" href="{% static 'css\shipping.css' %}"  />
     <script src="https://kit.fontawesome.com/c6234539c7.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +17,8 @@
 </head>
 <body>
     <nav id="nav">
-        <h1>Jordan New Releases</h1>
+        <div style="display:flex; width:50%; margin:0 auto;">
+            <h1>Jordan New Releases</h1><h2 class="dot">.</h2></div>
           <div>
              <img id="jordanimage" src="{% static 'images\jordanlogo.png'%}"/>
           </div>
@@ -25,12 +28,13 @@
             <a href=""><li>Contact</li></a>
         </ul>
     </nav>
+    {% block content %}
     <main>
         <section id="leftS">
             <h2 id="titleLeft">A Couple of New Releases.</h2>
             <div id="photoSection">
                 <div id="row1">
-                    <!--box-->
+                    <!--box1-->
                     <div style="border-style:outset; width:200px; background-color: #e8e8e8;">
                         <img class="ones" src="{% static 'images\1s.jpg'%}"/>
                         <h3>Jordan 1's</h3>
@@ -39,11 +43,11 @@
                                 <button class="AddC"><i class="fas fa-plus-circle"></i> Add to Cart</button>
                                 <input class="inputI" type="text" value="1">
                                 <hr>
-                                <strong><p>$ 40.00</p></strong>
+                                <strong><p style="position:relative; top:-10px;">$ 40.00</p></strong>
                             </form>
                         </div>
                     </div>
-                    <!--box-->
+                    <!--box2-->
                     <div style="border-style:outset; width:200px; background-color: #e8e8e8;">
                        <img class="ones" src="{% static 'images\retro.jpg'%}"/>
                         <h3>Retro</h3>
@@ -58,7 +62,7 @@
                     </div>
                 </div>
                 <div id="row2" >
-                    <!--box-->
+                    <!--box3-->
                     <div style="border-style:outset; width:200px; background-color: #e8e8e8;">
                         <img class="ones" src="{% static 'images\air3.jpg'%}"/>
                         <h3>Air Jordan 3</h3>
@@ -71,7 +75,7 @@
                             </form>
                         </div>
                     </div>
-                    <!--box-->
+                    <!--box4-->
                     <div style="border-style:outset; width:200px; height:279px; background-color: #e8e8e8;">
                         <img class="ones" src="{% static 'images\air4.jpg'%}"/>
                         <h3>Air Jordan 4</h3>
@@ -92,6 +96,7 @@
               <div>
                   <h2 style="text-align:center;">Cart Items</h2>
               </div>
+
                     <table id="Table">
                         <tr>
                             <th class="tableD">Item</th>
@@ -107,15 +112,20 @@
                             <td><button id="outterTrash"><i id="trash" class="fas fa-trash-alt"></i></button></td>
                         </tr>
                     </table>
+
               <hr>
               <button class="btn btn-success" id="checkoutbutton" >Checkout</button>
 
          </section>
 
     </main>
-    <main>
-
+    {% endblock content %}
+       <main id="bottonS">
     </main>
+
+     <section id="bottonSection">
+
+     </section>
 
 </body>
 </html>
