--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css\index.css' %}"  />
     <link rel="stylesheet" href="{% static 'css\cart.css' %}"  />
     <link rel="stylesheet" href="{% static 'css\shipping.css' %}"  />
+    <link rel="stylesheet" href="{% static 'css\final.css' %}"  />
     <script src="https://kit.fontawesome.com/c6234539c7.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,9 +24,10 @@
              <img id="jordanimage" src="{% static 'images\jordanlogo.png'%}"/>
           </div>
         <ul>
-            <a href=""><li>Home</li></a>
+            <a href="/"><li>Home</li></a>
             <a href=""><li>About</li></a>
             <a href=""><li>Contact</li></a>
+            <a><li style="color:white;">Guest Checkout only</li></a>
         </ul>
     </nav>
     {% block content %}
@@ -39,9 +41,9 @@
                         <img class="ones" src="{% static 'images\1s.jpg'%}"/>
                         <h3>Jordan 1's</h3>
                         <div style="display:flex; height:10px;">
-                            <form style="height:10px;">
+                            <form style="height:10px;" method="POST" action="/">{% csrf_token %}
                                 <button class="AddC"><i class="fas fa-plus-circle"></i> Add to Cart</button>
-                                <input class="inputI" type="text" value="1">
+                                <input class="inputI" type="text" name="Jordan1" value="1">
                                 <hr>
                                 <strong><p style="position:relative; top:-10px;">$ 40.00</p></strong>
                             </form>
@@ -52,9 +54,9 @@
                        <img class="ones" src="{% static 'images\retro.jpg'%}"/>
                         <h3>Retro</h3>
                         <div style="display:flex; height:10px;">
-                            <form style="height:10px;">
+                            <form style="height:10px;" method="POST" action="/">{% csrf_token %}
                                 <button class="AddC"><i class="fas fa-plus-circle"></i> Add to Cart</button>
-                                <input class="inputI" type="text" value="1">
+                                <input class="inputI" name="retro" type="text" value="1">
                                 <hr>
                                 <strong><p>$ 80.00</p></strong>
                             </form>
@@ -67,9 +69,9 @@
                         <img class="ones" src="{% static 'images\air3.jpg'%}"/>
                         <h3>Air Jordan 3</h3>
                         <div style="display:flex; height:10px;">
-                            <form style="height:10px;">
+                            <form style="height:10px;" method="POST" action="/">{% csrf_token %}
                                 <button class="AddC"><i class="fas fa-plus-circle"></i> Add to Cart</button>
-                                <input class="inputI" type="text" value="1">
+                                <input class="inputI" name="jordan3" type="text" value="1">
                                 <hr>
                                 <strong><p>$ 60.00</p></strong>
                             </form>
@@ -80,9 +82,9 @@
                         <img class="ones" src="{% static 'images\air4.jpg'%}"/>
                         <h3>Air Jordan 4</h3>
                             <div style="display:flex; height:10px;">
-                                <form style="height:10px;">
+                                <form style="height:10px;" action="/" method="POST">{% csrf_token %}
                                     <button class="AddC"><i class="fas fa-plus-circle"></i> Add to Cart</button>
-                                    <input class="inputI" type="text" value="1">
+                                    <input class="inputI" name="jordan4" type="text" value="1">
                                     <hr>
                                     <strong><p>$ 50.00</p></strong>
                                 </form>
@@ -103,18 +105,27 @@
                             <th class="tableD" >Price</th>
                             <th class="tableD" >Quantity</th>
                         </tr>
-                        <tr  >
+                        {% for i in allitems %}
+                        <tr>
                             <td style="border-right:solid;" class="tableD">
                                 <p class="tableText">
-                                <img style="width:11%;" src="{% static 'images\air4.jpg'%}"/>Jordan 4</p></td>
-                            <td style="border-right:solid;" class="tableD"><p class="tableText">$ 40.00</p></td>
-                            <td class="tableD"><p class="tableText">1</p></td>
-                            <td><button id="outterTrash"><i id="trash" class="fas fa-trash-alt"></i></button></td>
+                                <img style="width:11%;" src="{% static 'images\air4.jpg'%}"/>{{i.Name}}</p></td>
+                            <td style="border-right:solid;" class="tableD"><p class="tableText">$ {{i.price}}</p></td>
+                            <td class="tableD">{% if i.id == 1 %}<p class="tableText">{{one}}</p>{% endif %}
+                            {% if i.id == 2 %}<p class="tableText">{{two}}</p>{% endif %}
+                            {% if i.id == 3 %}<p class="tableText">{{three}}</p>{% endif %}
+                                {% if i.id == 4 %}<p class="tableText">{{four}}</p>{% endif %}
+
+                            </td>
+                            <td><a href="/delete/{{i.id}}/"><button id="outterTrash" >
+                                <i id="trash" class="fas fa-trash-alt"></i></button></a></td>
                         </tr>
+                        {% endfor %}
                     </table>
 
               <hr>
-              <button class="btn btn-success" id="checkoutbutton" >Checkout</button>
+              <a style="text-decoration: none"href="/cart/">
+                  <button class="btn btn-success" href="cart/" id="checkoutbutton" >Checkout</button></a>
 
          </section>
 
