--- a/templates/shippinginfo.html
+++ b/templates/shippinginfo.html
@@ -10,19 +10,21 @@
 
 <section id="wholesection">
         <form id="shippingform">
-            <h2 style="color:white; margin-bottom:5%; margin-left:2%;">Shipping Information</h2>
-            <div class="shippindinfo"><label for="name"> Name(First/Last): </label><input id="name" type="text"
+            <h2 style=" margin-bottom:5%; margin-left:2%;">Shipping Information</h2>
+            <div class="shippindinfo"><label for="name"><strong> Name(First/Last): </strong></label><input id="name" type="text"
             class="input"></div>
-            <div class="shippindinfo"><label for="name">Email: </label><input id="email" type="text"
+            <div class="shippindinfo"><label for="name"><strong> Email: </strong></label><input id="email" type="text"
             class="input"></div>
-            <div class="shippindinfo" ><label for="address"> Shipping Address: </label><input id="address" type="text"
+            <div class="shippindinfo" ><label for="address"><strong>  Shipping Address: </strong></label>
+                <input id="address" type="text"
             class="input" ></div>
-            <div class="shippindinfo" ><label for="zipcode"> Zip Code: </label><input id="zipcode"type="text"
+            <div class="shippindinfo" ><label for="zipcode"><strong> Zip Code: </strong></label><input id="zipcode"type="text"
             class="input" ></div>
-            <div class="shippindinfo" ><label for="state"> City, State </label><input id="state" type="text"
+            <div class="shippindinfo" ><label for="state"><strong> City, State </strong></label><input id="state" type="text"
             class="input" ></div>
             <div style="display:flex; width:100%;">
-                <button type="button" style="width:20%; height:10%;"class="btn btn-danger"><i class="fas fa-backward"></i> Back</button>
+                <a href="/cart/" style="width:30%; height:45%;"><button type="button"  style="width:70%; height:30%;"class="btn btn-danger">
+                    <i class="fas fa-backward"></i> Back</button></a>
                 <button type="button"  style="width:30%; height:10%; display:inline; margin-left: 30%;"
                         class="btn btn-success" >Place Order</button>
             </div>
