--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,4 +1,5 @@
 {% extends 'index.html'%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
 </head>
 <body>
 {% block content %}
+
 <section id="cartbody">
     <header id="headertitle">
             <h3 style="text-align:center; color:white;">Cart Items</h3>
@@ -25,18 +27,20 @@
                         <td>{{j.Name}}</td>
                         <td class="HeadSpace"> ${{j.price}}</td>
                         <td class="HeadSpace" style="display:flex;">
-                            {% if i.id == 1 %} <p>{{one}}</p>{% endif %}
-                            {% if i.id == 2 %} <p>{{two}} </p>{% endif %}
-                            {% if i.id == 3 %} <p>{{three}}</p>{% endif %}
-                            {% if i.id == 4 %} <p>{{four}}</p>{% endif %}
-                            <div id="updown"> <a style="color:black;"href="">
-                                <i class="fas fa-sort-up updownbutton" ></i></a>
+                            {% if j.id == 1 %}<p class="QuanityNum">{{one}}</p>{% endif %}
+                            {% if j.id == 2 %} <p class="QuanityNum" >{{two}} </p>{% endif %}
+                            {% if j.id == 3 %} <p class="QuanityNum">{{three}}</p>{% endif %}
+                            {% if j.id == 4 %} <p class="QuanityNum">{{four}}</p>{% endif %}
+                            <div id="updown">
+                                <!--<a style="color:black;" href="">
+                                    <i class="fas fa-sort-up updownbutton"  onclick="upFunction()"></i></a>
                                 <a style="color:black; position:relative; top:-10px;" href="">
-                                    <i class="fas fa-sort-down updownbutton" ></i>
-                                </a> </div></td>
-                        <td><button type="button" class="btn btn-danger" style="
-                        position:relative; left: 60%;">Remove</button></td>
+                                    <i class="fas fa-sort-down updownbutton" id="downButton" ></i>
+                                </a> </div></td>-->
+                        <td><a href="/delete/{{j.id}}/"><button type="button" class="btn btn-danger" style="
+                        position:relative; left: 60%;">Remove</button></a></td>
                     </tr>
+                     <script src="{% static 'js/cart.js'%}"></script>
                     {% endfor %}
                 </table>
             <div>
@@ -48,8 +52,6 @@
     </div>
 
 </section>
-
-
 
 
 {% endblock content %}
