--- a/templates/final.html
+++ b/templates/final.html
@@ -13,17 +13,17 @@
         <hr style="color:white;">
         <div style="display:block; width:50%; text-align:center; ">
             <h5 class="colorText">Shipped To:</h5>
-            <p class="colorText" >Address: <strong>1234 Main StreetSt APT 04322</strong></p>
-            <p class="colorText" >Zip Code: <strong>56433</strong></p>
-            <p class="colorText">City and State: <strong>Austin, Texas</strong></p>
+            <p class="colorText" >Address: <strong>{{address}}</strong></p>
+            <p class="colorText" >Zip Code: <strong>{{zipcode}}</strong></p>
+            <p class="colorText">City and State: <strong>{{citystate}}</strong></p>
         </div>
     </div>
 
 
 
     <div id="RightSide">
-        <h6 style="text-align: center; margin-top: 10%;">Hello Jakob we will send you a a confirmation email to
-            john@gmail.com</h6>
+        <h6 style="text-align: center; margin-top: 10%;">Hello {{username}} we will send you a a confirmation email to
+            {{email}}</h6>
 
     </div>
 
