--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css\cart.css' %}"  />
     <link rel="stylesheet" href="{% static 'css\shipping.css' %}"  />
     <link rel="stylesheet" href="{% static 'css\final.css' %}"  />
+    <link rel="shortcut icon" type="image/png" href="{% static 'images\blackjordan.png' %}"  />
     <script src="https://kit.fontawesome.com/c6234539c7.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
